Add client APIs to BlockchainController
- Add GET api for clients
- Add test for client GET api
- Add client GET and POST apis to swager file
